tests/sksl/errors/Ossfuzz32156.glsl
### Compilation failed:

error: 1: array size must be an integer
1 error
